@@ -2599,6 +2599,11 @@
 	PR rtl-optimization/57341
 	* gcc.dg/torture/pr57341.c: New testcase.
 
+2013-05-23  Richard Biener  <rguenther@suse.de>
+
+	PR tree-optimization/57380
+	* g++.dg/tree-ssa/pr57380.C: New testcase.
+
 2013-05-23  Jakub Jelinek  <jakub@redhat.com>
 
 	PR middle-end/57344
